src/style.css
@import './blocks/search-form.css';

@font-face {
  font-family: Avenir;
  src: url('./fonts/Avenir-Book.ttf') format('truetype');
  font-weight: 300;
  font-display: block;
}

@font-face {
  font-family: Avenir;
  src: url('./fonts/Avenir-Heavy.ttf') format('truetype');
  font-weight: 700;
  font-display: block;
}

body {
  box-sizing: border-box;
  font-family: Avenir, sans-serif;
  font-weight: 300;
  font-size: 16px;
}

